--- a/Site web/startbootstrap-freelancer-gh-pages/index-en.html
+++ b/Site web/startbootstrap-freelancer-gh-pages/index-en.html
@@ -62,14 +62,22 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-                    <li class="page-scroll">
+                    <li class="page-scroll background">
                         <a href="#service">Services</a>
                     </li>
-                    <li class="page-scroll">
+                    <li class="page-scroll background">
                         <a href="#team">Team</a>
                     </li>
-                    <li class="page-scroll">
+                    <li class="page-scroll background">
                         <a href="#contact">Contact</a>
+                    </li>
+					<li class="page-scroll">
+                        <a  class = " navbar-ln" href="index-fr.html" hreflang="fr">
+							<span class=" lang-lbl" lang="Fr"></span>
+						</a>
+						<a  class = "active navbar-ln" href="index-en.html" hreflang="en">
+							<span class=" lang-lbl" lang="en"></span>
+						</a>
                     </li>
                 </ul>
             </div>
@@ -115,7 +123,6 @@ We take care of your apartment and protect your interests.</span>
 						<li>Emergency visit and damage mitigation</li>
 					</ul>
 				</div>
-
 				<div class="  col-sm-4 col-sm-offset-2 square-orange text-center eq-height">       
 					 <div class="row">
 						<div class="text-center">
@@ -129,7 +136,6 @@ We take care of your apartment and protect your interests.</span>
 					  </ul>
 				</div>
             </div>
-			<br> <br> <br>
 				<div class="row ">
                <div class="  col-sm-4 col-sm-offset-1 square-orange eq-height">       
 					 <div class="row ">
