--- a/Site web/startbootstrap-freelancer-gh-pages/index-fr.html
+++ b/Site web/startbootstrap-freelancer-gh-pages/index-fr.html
@@ -36,7 +36,7 @@
 
     <!-- Navigation -->
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
-        <div class="container navbar-header-total">
+        <div class="container-fluid navbar-header-total">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -45,7 +45,7 @@
                 <a class="navbar-brand" href="#page-top">Real Estate Caretaking</a>
             </div>
 			
-			 <div class="navbar-header-right-top page-scroll">
+			 <div class="navbar-header navbar-header-right-top page-scroll">
 				<a class="active navbar-ln" href="index-fr.html" hreflang="fr">
 					<span class=" lang-lbl" lang="fr"></span>
 				</a>
@@ -62,13 +62,13 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-                    <li class="page-scroll">
+                    <li class="page-scroll ">
                         <a href="#service">Services</a>
                     </li>
-                    <li class="page-scroll">
+                    <li class="page-scroll ">
                         <a href="#team">Qui sommes nous ?</a>
                     </li>
-                    <li class="page-scroll">
+                    <li class="page-scroll ">
                         <a href="#contact">Contact</a>
                     </li>
                 </ul>
@@ -127,7 +127,6 @@
 					  </ul>
 				</div>
             </div>
-			<br> <br> <br>
 				<div class="row ">
                <div class="  col-sm-4 col-sm-offset-1 square-orange eq-height">       
 					 <div class="row ">
