ajout du lien Linkedin

--- a/Site web/startbootstrap-freelancer-gh-pages/index-en.html
+++ b/Site web/startbootstrap-freelancer-gh-pages/index-en.html
@@ -36,7 +36,7 @@
 
     <!-- Navigation -->
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
-        <div class="container navbar-header-total">
+        <div class="container-fluid navbar-header-total">
             <!-- Brand and toggle get grouped for better mobile display -->
              <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -50,7 +50,7 @@
 					<span class=" lang-lbl" lang="fr"></span>
 				</a>
 				</div>
-				 <div class="navbar-header-right-bottom page-scroll">
+				 <div class="navbar-header navbar-header-right-bottom page-scroll">
 				<a  class = "active navbar-ln" href="index-en.html" hreflang="en">
 					<span class=" lang-lbl" lang="en"></span>
 				</a>
@@ -70,14 +70,6 @@
                     </li>
                     <li class="page-scroll background">
                         <a href="#contact">Contact</a>
-                    </li>
-					<li class="page-scroll">
-                        <a  class = " navbar-ln" href="index-fr.html" hreflang="fr">
-							<span class=" lang-lbl" lang="Fr"></span>
-						</a>
-						<a  class = "active navbar-ln" href="index-en.html" hreflang="en">
-							<span class=" lang-lbl" lang="en"></span>
-						</a>
                     </li>
                 </ul>
             </div>
@@ -299,10 +291,10 @@ We take care of your apartment and protect your interests.</span>
             </div>-->
             <div class="container">
                 <div class="row">
-				<div class="col-sm-4 ">
-				<img class="img-responsive" src="img/profile.png" alt="">
+				<div class="col-sm-4 text-center">
+				<img class="img-responsive center-block" src="img/profile.png" alt="">
 				</div>
-                    <div class="col-sm-7">
+                    <div class="col-sm-8">
                         <div class="modal-body ">
                             <h2> <div class="text-center"> Martine Hillion</h2> </div>
                             <br> <br> <br>
@@ -318,6 +310,11 @@ We take care of your apartment and protect your interests.</span>
                         </div>
                     </div>
                 </div>
+				<div class="row">
+					<div class="col-xs-1 col-sm-offset-1">
+					<a class="btn-social btn-outline" href="https://fr.linkedin.com/in/martine-hillion-77632551"> LinkedIn</a>
+					</div>
+				</div>
             </div>
         </div>
     </div>
