--- a/Site web/startbootstrap-freelancer-gh-pages/index-fr.html
+++ b/Site web/startbootstrap-freelancer-gh-pages/index-fr.html
@@ -214,21 +214,21 @@ Vous avez besoin d’une surveillance du bon état de votre bien, d’une assist
                     <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Name</label>
+                                <label>Nom</label>
                                 <input type="text" class="form-control" placeholder="Nom" id="name" required data-validation-required-message="Entrez votre nom.">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Email Address</label>
+                                <label>Adresse mail</label>
                                 <input type="email" class="form-control" placeholder="Adresse Mail" id="email" required data-validation-required-message="Entrez votre adresse mail.">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Phone Number</label>
+                                <label>Numéro de Téléphone</label>
                                 <input type="tel" class="form-control" placeholder="Numéro de Téléphone" id="phone" required data-validation-required-message="Entrez votre numéro de téléphone.">
                                 <p class="help-block text-danger"></p>
                             </div>
@@ -288,10 +288,10 @@ Vous avez besoin d’une surveillance du bon état de votre bien, d’une assist
             </div>-->
             <div class="container">
                 <div class="row">
-				<div class="col-sm-4 ">
-				<img class="img-responsive" src="img/profile.png" alt="">
+				<div class="col-sm-4 text-center">
+				<img class="img-responsive center-block" src="img/profile.png" alt="">
 				</div>
-                    <div class="col-sm-7">
+                    <div class="col-sm-8 ">
                         <div class="modal-body ">
                             <h2> <div class="text-center"> Martine Hillion</h2> </div>
                             <br> <br> <br>
@@ -300,13 +300,19 @@ Vous avez besoin d’une surveillance du bon état de votre bien, d’une assist
 <p>Elle a été responsable pour une importante association de la maintenance du patrimoine immobilier.</p>
 <p>Ces expériences lui ont permis de construire un solide réseau d’artisans et de fournisseurs.  </p>
 <br> <br>
-						<div class="col-lg-offset-5 ">	
+						
+						<div class="col-xs-offset-5 ">	
 							<button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Fermer</button>
 						</div>
 						
-                        </div>
-                    </div>
-                </div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-1 col-sm-offset-1">
+					<a class="btn-social btn-outline" href="https://fr.linkedin.com/in/martine-hillion-77632551"> LinkedIn</a>
+					</div>
+				</div>
             </div>
         </div>
     </div>
@@ -408,8 +414,8 @@ Vous avez besoin d’une surveillance du bon état de votre bien, d’une assist
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
     <!-- Contact Form JavaScript -->
-    <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
+    <script src="js/jqBootstrapValidationFr.js"></script>
+    <script src="js/contact_meFr.js"></script>
 
     <!-- Theme JavaScript -->
     <script src="js/freelancer.js"></script>
